[gd_scene load_steps=4 format=3 uid="uid://rs5ekht2of07"]

[ext_resource type="Script" path="res://scenes/enemy/board_enemy.gd" id="1_tp23g"]
[ext_resource type="PackedScene" uid="uid://xcmqojiv245m" path="res://scenes/enemy/enemy.tscn" id="1_xvayo"]
[ext_resource type="Texture2D" uid="uid://bho3bya1v7e6o" path="res://place_holder_art/muscle.png" id="3_k2aiq"]

[node name="BoardEnemy" type="VBoxContainer"]
custom_minimum_size = Vector2(86, 100)
offset_right = 86.0
offset_bottom = 112.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 1
alignment = 1
script = ExtResource("1_tp23g")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="EnemyVisuals" parent="CenterContainer" instance=ExtResource("1_xvayo")]
unique_name_in_owner = true

[node name="FightButton" type="Button" parent="."]
layout_mode = 2
text = "99"
icon = ExtResource("3_k2aiq")

[connection signal="gui_input" from="CenterContainer" to="." method="_on_center_container_gui_input"]
[connection signal="mouse_entered" from="CenterContainer" to="." method="_on_center_container_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer" to="." method="_on_center_container_mouse_exited"]
[connection signal="pressed" from="FightButton" to="." method="_on_fight_button_pressed"]
